c4prj2_input/grade.txt
Grading at Fri Jul 31 10:32:26 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:12:23: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
       fc->decks[index]->n_cards=0;
                       ^
future.c:13:23: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
       fc->decks[index]->cards[fc->n_cards++]=ptr;
                       ^
future.c:13:33: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘n_cards’
       fc->decks[index]->cards[fc->n_cards++]=ptr;
                                 ^
future.c:18:23: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
       fc->decks[index]->cards[fc->decks[index]->n_cards-1]=ptr;
                       ^
future.c:18:47: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
       fc->decks[index]->cards[fc->decks[index]->n_cards-1]=ptr;
                                               ^
future.c:19:23: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
       fc->decks[index]->n_cards++;
                       ^
future.c: In function ‘future_cards_from_deck’:
future.c:27:2: error: expected ‘;’ before ‘return’
  return;
  ^
future.c:31:33: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
       for(int j=0;j<fc->decks[i]->n_cards;j++)
                                 ^
future.c:33:16: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
    fc->decks[i]->cards[j]->value=deck->cards[i]->value;
                ^
future.c:34:16: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
    fc->decks[i]->cards[j]->suit=deck->cards[i]->suit;
                ^
Compilation of future.c failed

Overall Grade: F
